force-app/main/default/objects/Point_Ledger__c/Point_Ledger__c.object-meta.xml
<CustomObject>
    <label>Point Ledger</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Point Ledger</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>