force-app/main/default/objects/Point_Ledger__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Expiry date of the reward point. Reward points expire after 6 months from when they were accrued.</description>
    <formula>IF(ISPICKVAL(Transaction_Type__c, &apos;Accrual&apos;), ADDMONTHS(CreatedDate,  VALUE($Label.Point_Expiration_Duration_In_Months)), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>