force-app/main/default/objects/Point_Ledger__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to store if the points are expired. Creating this checkbox field instead of a formula field because formula fields that are calculated at runtime are not supported in roll up summary field filters. Populating this field using a scheduled path flow.</description>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>