force-app/main/default/objects/Point_Ledger__c/fields/Loyalty_Profile__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Profile__c</fullName>
    <description>Related loyalty profile.</description>
    <label>Loyalty Profile</label>
    <referenceTo>Loyalty_Profile__c</referenceTo>
    <relationshipLabel>Point Ledgers (Loyalty Profile)</relationshipLabel>
    <relationshipName>Point_Ledgers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>